--- a/Final Project/style.css
+++ b/Final Project/style.css
@@ -32,4 +32,20 @@ body, html {
     transform: translate(-50%, -50%);
     z-index: 1;
   }
+
+  .textbox {
+    width: 200px;
+    height: 100px;
+    background-color: #f0f0f0;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    text-align: center;
+    line-height: 100px;
+    cursor: pointer;
+    margin: 10px;
+}
+.textbox:hover {
+    background-color: #e0e0e0;
+}
+
   
